--- a/blog/templates/blog/includes/post_modale.html
+++ b/blog/templates/blog/includes/post_modale.html
@@ -1,8 +1,8 @@
 <!-- Modal -->
 <div class="modal fade" id="postModal-{{ post.id }}" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
-        <div class="modal-content bg-dark">
-            <ul class="nav nav-tabs border-secondary" id="postModalTab-{{ post.id }}" role="tablist">
+        <div class="modal-content ">
+            <ul class="nav nav-tabs" id="postModalTab-{{ post.id }}" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="post-tab-{{ post.id }}" data-bs-toggle="tab" href="#post-{{ post.id }}"
                        role="tab" aria-controls="post" aria-selected="true">Post</a>
@@ -22,7 +22,7 @@
             <div class="tab-content" id="postModalContent-{{ post.id }}">
                 <div class="tab-pane fade show active" id="post-{{ post.id }}" role="tabpanel"
                      aria-labelledby="post-tab">
-                    <div class="modal-header border-secondary">
+                    <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }}</h5>
                         <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true" class="text-light">&times;</span>
@@ -31,15 +31,15 @@
                     <div class="modal-body">
                         <p>{{ post.description }}</p>
                     </div>
-                    <div class="modal-footer border-secondary">
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
+                        <a class="btn btn-primary" href="{{ post.get_absolute_url }}">Continue Reading</a>
                     </div>
                 </div>
 
                 <div class="tab-pane fade" id="info-{{ post.id }}" role="tabpanel"
                      aria-labelledby="info-tab-{{ post.id }}">
-                    <div class="modal-header border-secondary">
+                    <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }} - Information</h5>
                         <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true" class="text-light">&times;</span>
@@ -55,16 +55,16 @@
                         <h5 class="mt-2">Clicks</h5>
                         <p>{{ post.clicks }}</p>
                     </div>
-                    <div class="modal-footer border-secondary">
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
+                        <a class="btn btn-primary" href="{{ post.get_absolute_url }}">Continue Reading</a>
                     </div>
                 </div>
 
                 <div class="tab-pane fade" id="comments-{{ post.id }}" role="tabpanel"
                      aria-labelledby="comments-tab-{{ post.id }}">
 
-                    <div class="modal-header border-secondary">
+                    <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }} - Comments</h5>
                         <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true" class="text-light">&times;</span>
@@ -74,9 +74,9 @@
                     <div class="modal-body">
                         {% include 'blog/includes/post_comments_base.html' %}
                     </div>
-                    <div class="modal-footer border-secondary">
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <a href="{{ post.get_absolute_url }}#comments" class="btn btn-primary">Continue Reading</a>
+                        <a class="btn btn-primary" href="{{ post.get_absolute_url }}#comments">Continue Reading</a>
                     </div>
                 </div>
             </div>
