--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -27,8 +27,8 @@
 {% endblock page_head %}
 
 {% block main %}
-        <div class="card text-white border-secondary bg-dark mb-2">
-            <div class="card-header border-secondary">
+        <div class="card mb-2">
+            <div class="card-header">
                 <span class="d-flex">
                     <span class="col">
                         <h2>Post #{{ flatpage.id }}</h2>
