--- a/khoBlog/templates/includes/nav/undernav.html
+++ b/khoBlog/templates/includes/nav/undernav.html
@@ -2,7 +2,7 @@
 {% load links_menu %}
 {% load featured_post %}
 
-<div class="nav-scroller shadow-sm mb-2 border-top border-secondary">
+<div class="nav-scroller shadow-sm mb-2">
     <nav class="nav nav-underline d-flex justify-content-between">
         {% links_menu urls %}
         {% featured_post_list urls %}
