--- a/blog/templates/blog/includes/post_comments_messages.html
+++ b/blog/templates/blog/includes/post_comments_messages.html
@@ -1,5 +1,5 @@
-<div class="ps-4 border-start border-secondary {% if comment.comment_answer %}ms-4 comment-reply comment-reply-{{ comment.comment_answer.pk }}{% endif %}" style="border-width: 4px !important;">
-    <div id="comment-{{ comment.id }}" class="card text-white border-secondary bg-dark mt-2">
+<div class="card ps-4 border-start {% if comment.comment_answer %}ms-4 comment-reply comment-reply-{{ comment.comment_answer.pk }}{% endif %}" style="border-width: 4px !important;">
+    <div id="comment-{{ comment.id }}" class="card mt-2">
         <div class="card-header">
             <h4>
                 {% if comment.author or comment.author_logged and comment.author %}
@@ -58,15 +58,15 @@
         </div>
         <div class="card-body p-0">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-white border-secondary bg-dark">
+                <li class="list-group-item">
                     {{ comment.created_date|date:'l, d F Y' }} - {{ comment.created_date|time:"G:i:s" }} {% if comment.comment_answer %}<a href="{{ post.get_absolute_url }}#comment-{{ comment.comment_answer.id }}"><small>&lt;Related Comment&gt;</small></a>{% endif %}
                 </li>
                 {% autoescape on %}
-                    <li class="list-group-item text-white border-secondary bg-dark">{{ comment.message }}</li>
+                    <li class="list-group-item">{{ comment.message }}</li>
                 {% endautoescape %}
             </ul>
         </div>
-        <div class="card-footer border-secondary">
+        <div class="card-footer">
             <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
                 <a class="btn btn-primary d-block" href="{% url 'blog:add_reply_to_comment' pk_post=comment.related_post.pk pk=comment.pk %}">Reply to this comment</a>
             </div>
