--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -11,8 +11,8 @@
 @import 'utils';
 
 #id_body {
-    background-color: $palette_dark !important;
-    color: #f8f9fa !important;
+    @include background-color('bg');
+    @include color('text');
 }
 
 @media (min-width: lg) {
@@ -23,6 +23,8 @@
 
 body {
     padding-top: 56px !important;
+    @include background-color('bg');
+    @include color('text');
 
     &.offcanvas-open {
         overflow-y: hidden;
@@ -58,7 +60,7 @@ body {
         padding-left: 1rem;
         overflow-y: auto;
         visibility: hidden;
-        background-color: $dark;
+        @include background-color('bg');
         transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
 
         &.open {
@@ -73,6 +75,8 @@ body {
     z-index: 2;
     height: 2.75rem;
     overflow-y: hidden;
+    border-top: 1px solid;
+    @include border-color('border-color');
 
     & .nav {
         display: flex;
