--- a/khoBlog/templates/includes/nav/nav_about.html
+++ b/khoBlog/templates/includes/nav/nav_about.html
@@ -1,18 +1,18 @@
-<div class="p-4 mb-2 rounded border border-secondary shadow">
+<div class="card p-4 mb-2 rounded shadow">
     <h4 class="fst-italic">About</h4>
     <p class="mb-2">Khodok's Blog, Read at own risks</p>
 
     <div class="btn-group-vertical d-block mb-2" role="group" aria-label="Group Interesting Links">
-        <a href="{% url 'blog:latest' %}" class="btn btn-primary">Latest Post</a>
-        <a href="{% url 'blog:category_list' %}" class="btn btn-primary">Category List</a>
-        <a href="{% url 'portfolio:project_list' %}" class="btn btn-primary">Portfolio</a>
+        <a class="btn btn-primary" href="{% url 'blog:latest' %}">Latest Post</a>
+        <a class="btn btn-primary" href="{% url 'blog:category_list' %}">Category List</a>
+        <a class="btn btn-primary" href="{% url 'portfolio:project_list' %}">Portfolio</a>
 
         {% if user.is_authenticated %}
             {% if perms.polls.view_question %}
-                <a href="{% url 'polls:index' %}" class="btn btn-primary">Polls</a>
+                <a class="btn btn-primary" href="{% url 'polls:index' %}">Polls</a>
             {% endif %}
             {% if user.is_superuser %}
-                <a href="{% url 'todo:index' %}" class="btn btn-primary">Todo</a>
+                <a class="btn btn-primary" href="{% url 'todo:index' %}">Todo</a>
             {% endif %}
         {% endif %}
 
