--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -8,12 +8,12 @@
 {% block main %}
     {% for project in projects %}
         {% if project.featured %}
-            <div class="p-5 border rounded border-secondary bg-dark mb-2 shadow">
+            <div class="card p-4 rounded mb-2 shadow">
                 <div class="container">
                     <strong class="d-inline-block mb-2 text-muted text-uppercase fst-italic">Featured Project</strong>
                     <h1 class="display-4">{{ project.title }}</h1>
                     <p class="lead">{{ project.snippet }}</p>
-                    <a href="{{ project.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
+                    <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue Reading</a>
                 </div>
             </div>
         {% endif %}
@@ -23,8 +23,8 @@
         {% for project in projects %}
             {% if not project.featured %}
                 <div class="col-lg-4">
-                    <div class="card text-white border-secondary bg-dark shadow mb-2">
-                        <div class="card-header border-secondary">
+                    <div class="card shadow mb-2">
+                        <div class="card-header">
                             <h2>Project #{{ project.id }}</h2>
                         </div>
 
@@ -33,9 +33,9 @@
                             <p class="card-text">{{ project.snippet }}</p>
                         </div>
 
-                        <div class="card-footer border-secondary">
+                        <div class="card-footer">
                             <div class="btn-group-vertical d-block" role="group" aria-label="">
-                                <a href="{{ project.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
+                                <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue Reading</a>
                             </div>
                         </div>
 
