--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -31,7 +31,7 @@
             <div class="card-header">
                 <span class="d-flex">
                     <span class="col">
-                        <h2>Post #{{ flatpage.id }}</h2>
+                        <h2>Page #{{ flatpage.id }}</h2>
                     </span>
                 </span>
             </div>
