--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -10,7 +10,7 @@
         {% if project.featured %}
             <div class="card p-4 rounded mb-2 shadow">
                 <div class="container">
-                    <strong class="d-inline-block mb-2 text-muted text-uppercase fst-italic">Featured Project</strong>
+                    <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Project</strong>
                     <h1 class="display-4">{{ project.title }}</h1>
                     <p class="lead">{{ project.snippet }}</p>
                     <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue Reading</a>
